Swagger endpoint /users (GET)
